# OpenManusAgent-Holos-

./: README.md  __main__.py  agent_executor.py  config.py  holos_types.py  llm_client.py  logging_config.py  plant_tracer.py  pyproject.toml  start_agent.sh  task_performer.py  task_plan_performer.py
app/agent/: base.py
app/tool/: web_search.py
workspace/: AI_nuclear_fusion_report.txt  SJTU_Optimization_Report.txt  calculator.py
